Bug 775032 - System Message Handler - Fix B2G installation bug (MOZ_SYS_MSG is not defined correctly). r=vingtetun,khuey